--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -23,17 +23,17 @@
     z-index: 1;
 
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: flex-start;
     padding: var(--padding-x);
 }
 
 .hero-content {
-    max-width: 50%;
+    max-width: 45%;
 }
 
 .hero-content h1 {
-    margin-bottom: 20px;
+    margin-bottom: 1rem;
 }
 
 
